<resources>
    <string name="app_name">Flash Sales</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="store">STORE</string>
    <string name="fazer_cadastro">Realizar cadastro</string>
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="fazer_login">Realizar Login</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="action_sign_in">Login</string>
    <string name="birth">Data de Nascimento</string>
    <string name="telefone">Telemovel</string>
    <string name="name">Nome</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="preferencias">Preferencias</string>
    <string name="send">Enviar</string>
    <string name="selecione_preferencias">Selecione as suas preferencias</string>
</resources>
