<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:titleTextColor="@color/white"
            app:title="@string/fazer_cadastro"/>

        <EditText
            android:id="@+id/nameET"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/toolbar"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_alignParentLeft="true" />
        <EditText
            android:id="@+id/phoneET"
            android:hint="@string/telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameET"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:inputType="phone"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/dobLL"
            android:layout_below="@+id/phoneET"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <EditText
                android:id="@+id/birthDateET"
                android:hint="@string/birth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:maxLength="10"
                android:layout_weight="1"
                />
            <ImageButton
                android:id="@+id/dobBT"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_calendar"
                android:background="@android:color/transparent"
                android:onClick="dobBT"
                />
        </LinearLayout>


        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_overlay"
            android:layout_below="@id/dobLL"
            android:layout_margin="10dp"
            />

        <EditText
            android:id="@+id/emailET"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:inputType="textEmailAddress"/>


        <EditText
            android:id="@+id/passwdET"
            android:hint="@string/senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailET"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/confirmPasswdET"
            android:hint="@string/confirmar_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwdET"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/doLoginBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/button_orange"
            android:onClick="signUp"
            android:text="@string/fazer_cadastro"
            android:textColor="@android:color/white" />

    </RelativeLayout>
